# mdformat-frontmatter

./: .pre-commit-config.yaml  .pre-commit-test.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml  tox.ini
.github/workflows/: flit-release.yml  tests.yml
mdformat_frontmatter/: __init__.py  plugin.py
mdformat_plugin/: __init__.py
tests/: fixtures.md  pre-commit-test.md  simple-md-test.md  test_fixtures.py
