[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mdformat_frontmatter"
author = "Chris Butler"
author-email = "chris@thebutlers.me"
description-file = "README.md"
home-page = "https://github.com/butler54/mdformat-frontmatter"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = "mdformat,markdown,markdown-it"

requires-python=">=3.7"
requires=["mdformat >=0.7.16,<0.8.0",
          "mdit-py-plugins >=0.4.0",
          "ruamel.yaml"
            ]

[tool.flit.metadata.requires-extra]
test = [
    "pytest>=7.3",
    "coverage",
    "pytest-cov"
]
dev = ["pre-commit"]

[tool.flit.entrypoints."mdformat.parser_extension"]
frontmatter = "mdformat_frontmatter"

[tool.flit.sdist]
include = []
exclude = [".github/", "tests/"]

[tool.isort]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["mdformat_frontmatter", "tests"]

# Settings for Black compatibility
profile = "black"

[tool.semantic_release]
version_variables = [
    'mdformat_frontmatter/__init__.py:__version__'
]
branch = 'main'
upload_to_pypi = false
version_source = 'commit'
newline_sequence = '\n'
