[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mdformat_frontmatter"
authors= [ {name = "Chris Butler", email = "chris@thebutlers.me"},

]
readme = "README.md"

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "mdformat",
    "markdown",
    "markdown-it"
]
dynamic = ["version", "description"]

requires-python=">=3.7"
dependencies=["mdformat >=0.7.16,<0.8.0",
          "mdit-py-plugins >=0.4.0",
          "ruamel.yaml"
            ]
[project.urls]
Source = "https://github.com/butler54/mdformat-frontmatter"
Changelog = "https://github.com/butler54/mdformat-frontmatter/blob/main/CHANGELOG.md"
[project.optional-dependencies]
test = [
    "pytest>=7.3",
    "coverage",
    "pytest-cov"
]
dev = [
    "pre-commit",
    "python-semantic-release >=8.3.0",
    "flit >= 3.9"
    ]

[project.entry-points."mdformat.parser_extension"]
frontmatter = "mdformat_frontmatter"

[tool.flit.sdist]
include = []
exclude = [".github/", "tests/"]

[tool.isort]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["mdformat_frontmatter", "tests"]

# Settings for Black compatibility
profile = "black"

[tool.semantic_release]
version_variables = [
    'mdformat_frontmatter/__init__.py:__version__'
]
branch = 'main'
upload_to_pypi = false
version_source = 'commit'
newline_sequence = '\n'
